datafusion-cli/tests/snapshots/progress_bar_with_blocking_operators.snap
---
source: datafusion-cli/tests/cli_integration.rs
info:
  program: datafusion-cli
  args:
    - "--progress"
    - "on"
    - "--command"
    - "SELECT * FROM generate_series(1, 1000) ORDER BY 1 DESC"
    - "-q"
---
success: true
exit_code: 0
----- stdout -----
+-------+
| value |
+-------+
| 1000  |
| 999   |
| 998   |
| 997   |
| 996   |
| 995   |
| 994   |
| 993   |
| 992   |
| 991   |
| 990   |
| 989   |
| 988   |
| 987   |
| 986   |
| 985   |
| 984   |
| 983   |
| 982   |
| 981   |
| 980   |
| 979   |
| 978   |
| 977   |
| 976   |
| 975   |
| 974   |
| 973   |
| 972   |
| 971   |
| 970   |
| 969   |
| 968   |
| 967   |
| 966   |
| 965   |
| 964   |
| 963   |
| 962   |
| 961   |
| .     |
| .     |
| .     |
+-------+

----- stderr -----
